# smol-v-rs

./: .gitmodules  CHANGES.md  Cargo.toml  README.md  bindgen.sh  build.rs
src/: lib.rs  ops.rs
