[package]
name = "smol-v"
version = "0.1.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust ffi bindings and idiomatic wrapper for aras-p/smol-v"
homepage = "https://github.com/gwihlidal/smol-v-rs"
repository = "https://github.com/gwihlidal/smol-v-rs"
documentation = "https://docs.rs/smol-v"
readme = "README.md"
keywords = ["vulkan", "shader", "compression", "3d", "rendering"]
categories = ["rendering", "rendering::engine", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "native/source/smolv.h",
    "native/source/smolv.cpp",
]

[badges]
travis-ci = { repository = "gwihlidal/smol-v-rs" }
maintenance = { status = "actively-developed" }

[build-dependencies]
cc = { version = "1.0.25", features = ["parallel"] }

[dev-dependencies]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1