[package]
name = "smol-v"
version = "0.1.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Pure rust port of aras-p/smol-v"
homepage = "https://github.com/gwihlidal/smol-v-rs"
repository = "https://github.com/gwihlidal/smol-v-rs"
documentation = "https://docs.rs/smol-v"
readme = "README.md"
keywords = ["vulkan", "shader", "compression", "3d", "rendering"]
categories = ["rendering", "rendering::engine", ]
license = "MIT/Apache-2.0"
include = [
    "src/*.rs",
    "Cargo.toml",
]
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/smol-v-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "1.2.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1